2007-12-18  Sven Neumann  <sven@gimp.org>

	* app/base/tile-pyramid.c: use the coordinate parameters in
	tile_data_pointer() instead of adjusting the pointer manually.

2007-12-18  Sven Neumann  <sven@gimp.org>

	* app/base/tile-pyramid.c
	* app/paint-funcs/paint-funcs.c: sprinkled with const qualifiers.

2007-12-18  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.[ch]: renamed tile_manager_validate() to
	tile_manager_validate_tile(). If no validate_proc is set,
	initialize the tile data to all zero when validating it. This way
	we never hand out uninitialized data and valgrind doesn't need to
	complain any longer.

	* app/base/tile.c: changed accordingly.

	* app/core/gimpselection.c: no need to set an extra validate_proc
	here as the default implementation now does the job for us.

2007-12-18  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable.[ch]: made get_tiles() a method of
	GimpDrawable.

2007-12-18  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-render.c
	(render_image_tile_fault_nearest): added code for 1 and 3 bytes
	per pixel. Fixes bug #504115.

2007-12-16  Bill Skaggs  <weskaggs@primate.udavis.edu>

	* plug-ins/common/edge.c: reverted to state pre-12/16.
	
2007-12-17  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c (project_intensity): minor
	cleanup.

2007-12-17  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpregioniterator.c: code cleanup; reduced number of
	progress updates.

2007-12-16  Bill Skaggs  <weskaggs@primate.udavis.edu>

	* plug-ins/common/edge.c: name reverted to "Edge",
	label in combo reverted to "Prewitt", other changes kept.
	
2007-12-16  Bill Skaggs  <weskaggs@primate.udavis.edu>

	* plug-ins/common/edge.c: renamed to "Sharp Edges",
	added "invert" option, other usability tweaks.
	
2007-12-16  Bill Skaggs  <weskaggs@primate.udavis.edu>

	* menus/image-menu.xml.in: missed this yesterday
	
2007-12-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/plugin-defs.pl